# write-ai

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  main.py  models.py  pyproject.toml  requirements.txt  text_processing.py
.github/workflows/: docker-publish.yml
.superpowers/brainstorm/97189-1778326992/content/: markdown-rendering.html  status-placement.html
.superpowers/brainstorm/97189-1778326992/state/: server-info
docs/: 2026-05-09-vue3-cdn-migration-design.md
docs/superpowers/plans/: 2026-05-09-chat-conversation-history.md
docs/superpowers/specs/: 2026-05-09-chat-conversation-history-design.md  2026-05-09-status-banner-markdown-chat-design.md
static/: index.html  manifest.json  script.js  style.css
tests/: conftest.py  test_prompt_gen.py
writeai/static/: index.html  jspdf.umd.min.js  main.js  robots.txt  script.js  sitemap.xml  style.css  sw.js
writeai/static/components/: AppNav.js  ChatMessages.js  ChatSidebar.js  ChatTab.js  GrammarTab.js  ParaphraseTab.js  PromptGenTab.js
writeai/static/composables/: useApiStatus.js  usePwa.js  useTheme.js
writeai/static/utils/: clipboard.js  storage.js
