[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "write-ai"
version = "0.3.20"
description = "Grammar correction, paraphrasing, and AI chat powered by fine-tuned LLMs"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.118.2",
    "uvicorn==0.37.0",
    "llama-cpp-python==0.3.20",
    "huggingface-hub==0.35.3",
    "python-multipart==0.0.20",
    "pydantic==2.12.0",
    "httpx==0.28.1",
]

[project.scripts]
write-ai = "main:run"

[tool.setuptools]
py-modules = ["main"]
packages = ["writeai"]

[tool.setuptools.package-data]
"writeai" = ["static/**/*"]
